2004-11-15  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Panasonic DMC-FZ20.

2004-11-09  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added IXUS 40.

2004-10-28  Hubert Figuiere  <hfiguiere@teaser.fr>

	* ptp.h: Fix build for gcc 2.95
	(bug #1055868)

2004-10-20  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Konica-Minolta DiMAGE Z3

2004-10-17  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Canon PowerShot G6.

2004-09-28  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Canon PowerShot A400.

2004-09-21  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon EOS 20D.

2004-09-11  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Use widget name to mark up config entries.

	  Added more config cases from Canon in capture mode.
	  - zoom (working)
	  - auto focus assist light
	  - beep mode
	  - exposure compensation (not fully done)

2004-09-05  Marcus Meissner  <marcus@jet.franken.de>
	
	* ptp-pack.c: Pack integer arrays.
	* library.c: Enabled setting of configuration.
		- Made work and tested:
		* Canon Camera Owner.
		* Canon Time on camera.

	* ptp.[ch]: Make ptp_free_propertyvalue nonstatic.

2004-09-04  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Nikon Coolpix 2200

2004-08-25 Marcus Meissner  <marcus@jet.franken.de>

	* ptp-pack.c, ptp.c, ptp.h: 
	  - Added length parameters to the read functionality 
	    to avoid buffer overflows.
 	  - Added PTPPropertyValues as generic property values.
	  - Rewrote all property handling functions.
	  - Added property array support.
	  - Move property names from ptpcam to libptp.

	* library.c:
	  - Print all available property values with names in --summary
	  - Started generic configuration handling.

2004-08-15  Marcus Meissner  <meissner@suse.de>
	
	* library.c: Added Canon PowerShot A85.
	* library.c: Added Kodak LS753 DX7630 CX7300 CX7220
	   CX7330 CX7530 DX7440 CX6445 as reported on SourceForge